# Pomodoro-CLI

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  notify.rs  timer.rs
src/modules/: config.rs  display.rs  formatter.rs  mod.rs  notify.rs  state.rs  tick_notifier.rs  timer.rs
